[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "probabilistic-routing-attention"
version = "0.1.0"
description = "UABLA-448: Uncertainty-Adaptive Block Latent Attention prototype"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
